[package]
name = "tree-sitter-yaml"
description = "yaml grammar for the tree-sitter parsing library"
version = "0.1.0"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = { git = "https://github.com/akshay-deepsource/tree-sitter" }

[build-dependencies]
cc = "1.0"

